chore fix Markdown style bleeding into theme

--- a/components/src/components/Chat/Markdown.css
+++ b/components/src/components/Chat/Markdown.css
@@ -1,14 +1,14 @@
-table {
+.markdown-wrapper table {
   border-width: 0.5px;
   border-style: solid;
 }
 
-th,
-td {
+.markdown-wrapper th,
+.markdown-wrapper td {
   padding: 8px 1rem;
 }
 
-pre {
+.markdown-wrapper pre {
   background-color: #fafafa;
   padding: 6px 12px;
   border-radius: 4px;
